adding db configs and reading env file

--- a/src/main/resources/config/marketplace.yml
+++ b/src/main/resources/config/marketplace.yml
@@ -1,6 +1,17 @@
 spring:
   application:
     name: marketplace
+  datasource:
+    url: jdbc:postgresql://${MARKETPLACE_DB_HOST:localhost}:${MARKETPLACE_DB_PORT:5434}/${MARKETPLACE_DB_NAME:marketplace}
+    username: ${DB_USER:root}
+    password: ${DB_PASSWORD:root}
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+    hibernate:
+      ddl-auto: none
 
 server:
   # To avoid colliding with other apps in port 8080
