--- a/src/main/resources/config/users.yml
+++ b/src/main/resources/config/users.yml
@@ -2,9 +2,9 @@ spring:
   application:
     name: users
   datasource:
-    url: jdbc:postgresql://${USERS_DB_HOST:localhost}:${USERS_DB_PORT:5432}/${USERS_DB_NAME:users}
-    username: ${DB_USER:root}
-    password: ${DB_PASSWORD:root}
+    url: "${USERS_DB_URL}"
+    username: "${DB_USER:root}"
+    password: "${DB_PASSWORD:root}"
     driver-class-name: org.postgresql.Driver
   jpa:
     properties:
