--- a/src/main/resources/config/marketplace.yml
+++ b/src/main/resources/config/marketplace.yml
@@ -13,6 +13,9 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
       ddl-auto: update
+  graphql:
+    graphiql:
+      enabled: true
 
 server:
   # To avoid colliding with other apps in port 8080
