--- a/src/main/resources/config/marketplace.yml
+++ b/src/main/resources/config/marketplace.yml
@@ -3,8 +3,8 @@ spring:
     name: marketplace
   datasource:
     url: "${MARKETPLACE_DB_URL}"
-    username: "${DB_USER:root}"
-    password: "${DB_PASSWORD:root}"
+    username: "${DB_USER}"
+    password: "${DB_PASSWORD}"
     driver-class-name: org.postgresql.Driver
   jpa:
     generate-ddl: true
