--- a/src/main/resources/config/users.yml
+++ b/src/main/resources/config/users.yml
@@ -3,8 +3,8 @@ spring:
     name: users
   datasource:
     url: "${USERS_DB_URL}"
-    username: "${DB_USER:root}"
-    password: "${DB_PASSWORD:root}"
+    username: "${DB_USER}"
+    password: "${DB_PASSWORD}"
     driver-class-name: org.postgresql.Driver
   jpa:
     generate-ddl: true
@@ -13,6 +13,11 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
       ddl-auto: update
+
+keycloak:
+  admin:
+    username: "${KEYCLOAK_ADMIN}"
+    password: "${KEYCLOAK_ADMIN_PASSWORD}"
 
 server:
   # To avoid colliding with other apps in port 8080
