--- a/src/main/resources/config/users.yml
+++ b/src/main/resources/config/users.yml
@@ -13,6 +13,12 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
       ddl-auto: update
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 10MB
+      max-request-size: 10MB
+
 
 keycloak:
   admin:
