--- a/src/main/resources/config/users.yml
+++ b/src/main/resources/config/users.yml
@@ -16,8 +16,8 @@ spring:
   servlet:
     multipart:
       enabled: true
-      max-file-size: 10MB
-      max-request-size: 10MB
+      max-file-size: 2GB
+      max-request-size: 2GB
 
 
 keycloak:
