--- a/src/main/resources/config/marketplace.yml
+++ b/src/main/resources/config/marketplace.yml
@@ -30,6 +30,9 @@ spring:
           # consumer receives all messages sent while
           # it was offline
           group: marketplace-group
+        receiveMessage-in-2:
+          destination: servicesQueue
+          group: marketplace-group
 
 server:
   # To avoid colliding with other apps in port 8080
