minor config change

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -5,6 +5,11 @@ spring:
         binder:
           brokers: localhost:9092
 
+server:
+  error:
+    include-message: always
+    include-binding-errors: always
+
 eureka:
   client:
     # To report to Eureka when this service is up
