new queue config

--- a/src/main/resources/config/marketplace.yml
+++ b/src/main/resources/config/marketplace.yml
@@ -33,6 +33,9 @@ spring:
         receiveMessage-in-2:
           destination: servicesQueue
           group: marketplace-group
+        receiveMessage-in-3:
+          destination: contentsQueue
+          group: marketplace-group
 
 server:
   # To avoid colliding with other apps in port 8080
