--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -4,6 +4,8 @@ spring:
       kafka:
         binder:
           brokers: localhost:9092
+  kafka:
+    bootstrap-servers: localhost:9092
 
 server:
   error:
