--- a/src/main/resources/config/services.yml
+++ b/src/main/resources/config/services.yml
@@ -13,6 +13,11 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
       ddl-auto: update
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 2GB
+      max-request-size: 2GB
   cloud:
     stream:
       bindings:
