--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -3,9 +3,9 @@ spring:
     stream:
       kafka:
         binder:
-          brokers: localhost:9092
+          brokers: kafka:9092
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: kafka:9092
 
 server:
   error:
@@ -18,7 +18,7 @@ eureka:
     registerWithEureka: true
     # Eureka server URL
     service-url:
-      defaultZone: ${EUREKA_SERVER_URL:http://localhost:8761/eureka/}
+      defaultZone: ${EUREKA_SERVER_URL:http://eureka:8761/eureka/}
   instance:
     # To avoid using DNS
     prefer-ip-address: true
@@ -48,4 +48,4 @@ minio:
   access:
     key: ${MINIO_ACCESS_KEY}
     secret: ${MINIO_SECRET_KEY}
-  url: http://localhost:9001
+  url: http://minio:9001
